<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.forge.ui.navbar.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.forge.ui.navbar.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_analysis"
        android:name="com.example.forge.ui.navbar.analysis.AnalysisFragment"
        android:label="@string/menu_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/nav_tournaments"
        android:name="com.example.forge.ui.navbar.tournaments.TournamentsFragment"
        android:label="@string/menu_tournaments"
        tools:layout="@layout/fragment_tournaments" />

    <fragment
        android:id="@+id/nav_diet"
        android:name="com.example.forge.ui.navbar.diet.DietFragment"
        android:label="@string/menu_diet"
        tools:layout="@layout/fragment_diet" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.forge.ui.navbar.progress.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.forge.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_choose"
        android:name="com.example.forge.ui.ChooseFragment"
        android:label="Choose"
        tools:layout="@layout/fragment_choose" />

</navigation>